# bili-fav-rs

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
src/: api.rs  fav.rs  log.rs  main.rs  read_cfg.rs  save_video.rs  video_info.rs  video_url.rs
